[gd_scene load_steps=3 format=3 uid="uid://nn1xchhviiun"]

[ext_resource type="Script" uid="uid://bvbxy44qcmu3p" path="res://Assets/UI/Pause Menu/pause.gd" id="1_ii0wd"]
[ext_resource type="Texture2D" uid="uid://px7r7wvdy3ml" path="res://Assets/UI/Loading Screen/maxresdefault.jpg" id="2_iio0w"]

[node name="Canvas Layer" type="CanvasLayer"]
layer = 10
script = ExtResource("1_ii0wd")

[node name="Pause Menu" type="Control" parent="."]
process_mode = 2
self_modulate = Color(0.4479161, 0.43770874, 0.4363479, 0.15294118)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control Screen" type="TextureRect" parent="Pause Menu"]
visible = false
layout_mode = 0
offset_left = -68.0
offset_top = -27.0
offset_right = 1212.0
offset_bottom = 693.0
texture = ExtResource("2_iio0w")

[node name="Panel" type="Panel" parent="Pause Menu"]
layout_mode = 0
offset_right = 1150.0
offset_bottom = 652.0

[node name="Resume" type="Button" parent="Pause Menu/Panel"]
layout_mode = 0
offset_left = 402.0
offset_top = 389.0
offset_right = 725.0
offset_bottom = 462.0
theme_override_font_sizes/font_size = 47
text = "Resume"

[node name="Quit" type="Button" parent="Pause Menu/Panel"]
layout_mode = 0
offset_left = 402.0
offset_top = 548.0
offset_right = 726.0
offset_bottom = 621.0
theme_override_font_sizes/font_size = 47
text = "Quit to Menu
"

[node name="Controls" type="Button" parent="Pause Menu/Panel"]
layout_mode = 0
offset_left = 402.0
offset_top = 468.0
offset_right = 725.0
offset_bottom = 541.0
theme_override_font_sizes/font_size = 47
text = "Controls"

[connection signal="pressed" from="Pause Menu/Panel/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Pause Menu/Panel/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Pause Menu/Panel/Controls" to="." method="_on_controls_pressed"]
